--- a/wp-content/themes/artilia-storefront-child/style.css
+++ b/wp-content/themes/artilia-storefront-child/style.css
@@ -9,3 +9,100 @@ Template:     storefront
 */
 
 /* --------------- Theme customization starts here ----------------- */
+
+.woocommerce div.product.elementor form.cart table.variations td.value {
+    width: 100%;
+}
+
+.woocommerce div.product.elementor form.cart table.variations td.value:before {
+    width: 0;
+    margin: 0;
+}
+
+.woocommerce div.product.elementor form.cart table.variations td.label {
+    width: 100%;
+    letter-spacing: 0.2em;
+}
+
+.woocommerce div.product.elementor form.cart table.variations td span.selected-value {
+    font-family: "Open Sans", Open Sans;
+    font-size: 12px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    font-weight: 900;
+}
+
+.woocommerce div.product.elementor form.cart table.variations tr:not(:last-child) {
+    margin-bottom: 14px;
+}
+
+.single-product div.product table.variations .value {
+    margin-bottom: 0.8em;
+}
+
+/*Custom Artilia product options START */
+
+div.swatch-wrapper.selected {
+    border: 3px solid #000;
+    outline: none;
+}
+
+div.swatch-wrapper {
+    border: none;
+    margin: 0 15px 5px 0;
+}
+
+/*Custom Artilia product options END */
+
+/*Custom Artilia product options START */
+
+.swatch-control.radio-select ul li {
+    float: left;
+    position: relative;
+}
+
+.swatch-control.radio-select ul li:not(:first-child) {
+    margin-left: 15px;
+}
+
+.swatch-control.radio-select ul li label{
+    float: left;
+    position: relative;
+    margin-left: 0;
+}
+
+.swatch-control.radio-select ul li input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+    margin: 0;
+}
+
+.swatch-control.radio-select ul li label {
+    display: inline-block;
+    background-color: #ffffff;
+    padding: 10px 20px;
+    font-family: "Open Sans", Open Sans;
+    font-size: 12px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    border: 1px solid #000;
+}
+
+.swatch-control.radio-select ul li input[type="radio"]:checked + label {
+    font-weight: bold;
+    border: 3px solid #000;
+}
+
+.swatch-control.radio-select ul li input[type="radio"]:focus + label {
+    font-weight: bold;
+    border: 3px solid #000;
+}
+
+.swatch-control.radio-select ul li label:hover {
+    background-color: #ffffff;
+    cursor: pointer;
+    border: 3px solid #000;
+}
+
+/*Custom Artilia product options END */
